update readme
update readme for correct ner startup command